# K-Means-C

./: CMakeLists.txt  README.md
src/: kmeans.c  kmeans.h
test/tests/: test_base.c  test_base.h
